--- a/pom.xml
+++ b/pom.xml
@@ -131,6 +131,48 @@
                 </configuration>
             </plugin>
 
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>3.6.1</version>
+                <executions>
+                    <execution>
+                        <id>copy-jpackage-dependencies</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>copy-dependencies</goal>
+                        </goals>
+                        <configuration>
+                            <includeScope>runtime</includeScope>
+                            <outputDirectory>${project.build.directory}/jpackage-input/lib</outputDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <version>3.1.0</version>
+                <executions>
+                    <execution>
+                        <id>prepare-jpackage-input</id>
+                        <phase>package</phase>
+                        <configuration>
+                            <target>
+                                <mkdir dir="${project.build.directory}/jpackage-input"/>
+                                <copy file="${project.build.directory}/${project.build.finalName}.jar"
+                                      tofile="${project.build.directory}/jpackage-input/${project.build.finalName}.jar"
+                                      overwrite="true"/>
+                            </target>
+                        </configuration>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
             <!-- Packaging via jpackage -->
             <plugin>
                 <groupId>org.panteleyev</groupId>
@@ -143,7 +185,7 @@
                     <vendor>AGWU</vendor>
 
                     <!-- Input / Output -->
-                    <input>${project.build.directory}</input>
+                    <input>${project.build.directory}/jpackage-input</input>
                     <destination>${project.build.directory}/installer</destination>
 
                     <!-- Hauptklasse & JAR -->
@@ -151,7 +193,7 @@
                     <mainClass>de.agwu.apps.easysepa.MainApp</mainClass>
 
                     <!-- Pakettyp (plattformabhängig) -->
-                    <type>app-image</type> <!-- Windows: exe/msi; Linux: app-image/deb/rpm -->
+                    <type>APP_IMAGE</type> <!-- Windows: EXE/MSI; Linux: APP_IMAGE/DEB/RPM -->
 
                     <!-- Optional: weitere Einstellungen -->
                     <appVersion>${project.version}</appVersion>
