Package shaded jar distribution for release

--- a/pom.xml
+++ b/pom.xml
@@ -131,33 +131,26 @@
                 </configuration>
             </plugin>
 
-            <!-- Packaging via jpackage -->
             <plugin>
-                <groupId>org.panteleyev</groupId>
-                <artifactId>jpackage-maven-plugin</artifactId>
-                <version>1.7.1</version>
-
-                <configuration>
-                    <!-- Basisinformationen -->
-                    <name>EasySepa</name>
-                    <vendor>AGWU</vendor>
-
-                    <!-- Input / Output -->
-                    <input>${project.build.directory}</input>
-                    <destination>${project.build.directory}/installer</destination>
-
-                    <!-- Hauptklasse & JAR -->
-                    <mainJar>${project.build.finalName}.jar</mainJar>
-                    <mainClass>de.agwu.apps.easysepa.MainApp</mainClass>
-
-                    <!-- Pakettyp (plattformabhängig) -->
-                    <type>app-image</type> <!-- Windows: exe/msi; Linux: app-image/deb/rpm -->
-
-                    <!-- Optional: weitere Einstellungen -->
-                    <appVersion>${project.version}</appVersion>
-                    <copyright>© 2025 AGWU</copyright>
-                    <description>Tool zum Erstellen von SEPA pain.001 XML-Dateien aus CSV</description>
-                </configuration>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>3.5.1</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <createDependencyReducedPom>false</createDependencyReducedPom>
+                            <transformers>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <mainClass>de.agwu.apps.easysepa.MainApp</mainClass>
+                                </transformer>
+                            </transformers>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
